add alerts system-login

--- a/client/src/components/Login/login.module.css
+++ b/client/src/components/Login/login.module.css
@@ -51,3 +51,23 @@
     background-color: #3c89bd;
     transition: 0.5s;
 }
+
+.message_info {
+    margin-top: 20px;
+    background-color: #ABEBC6;
+    color: #186A3B;
+    padding: 10px;
+    border-radius: 5px;
+    transition: 0.8s;
+    transition: ease-in;
+}
+
+.message_error {
+    margin-top: 20px;
+    background-color: #F5B7B1;
+    color: #78281F;
+    padding: 10px;
+    border-radius: 5px;
+    transition: 0.8s;
+    transition: ease-in;
+}
